--- a/fullstack/src/main/resources/application.properties
+++ b/fullstack/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/users?serverTimezone=UTC 
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+
 
