--- a/fullstack/src/main/resources/application.properties
+++ b/fullstack/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/users?serverTimezone=UTC 
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/registro?serverTimezone=UTC 
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
