--- a/fullstack/src/main/resources/application.properties
+++ b/fullstack/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
